# 0rca-agent-template

./: Dockerfile  README.md  app.py  database.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
orca_agent_sdk/: config.py  server.py
orca_agent_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test.py
