[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orca-agent-sdk"
version = "0.1.1"
description = "Opinionated SDK for paid Algorand-verified AI agents with a single handler entrypoint."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Orca", email = "dev@your-domain.com" }
]
license = "MIT"
dependencies = [
  "Flask>=3.0.0",
  "py-algorand-sdk>=2.0.0",
  "algokit-utils>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/your-org/orca-agent-sdk"
Source = "https://github.com/your-org/orca-agent-sdk"

[tool.setuptools]
packages = ["orca_agent_sdk"]